--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 id="header">Kleines 1x1</h1>
         <br>
         <br>
-        <button class="start" id="start">start</button>
+        <button class="start" id="start">Start</button>
         <div class="question"> 
             <div class="minescroll">
                 <button id="Joker">JOKER</button>
