--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
         <br>
         <br>
         <button class="start" id="start">Start</button>
+
+        <div class="lvl" id="lvl">
+            <h6>Wähle dein Level:</h6>
+            <br>
+            <div class="lvl-btns" id="level-buttons">
+                <button class="level-button1" id="level-button1">Level 1 (20 Fragen)</button>
+                <button class="level-button2" id="level-button2">Level 2 (40 Fragen)</button>
+                <button class="level-button3" id="level-button3">Level 3 (60 Fragen)</button>
+                <button class="level-button4" id="level-button4">Level 4 (80 Fragen)</button>
+                <button class="level-button5" id="level-button5">Level 5 (100 Fragen)</button>
+            </div>
+        </div>
         <div class="question"> 
             <div class="minescroll">
                 <button id="Joker">JOKER</button>
@@ -27,7 +39,7 @@
         <h4 id="progress-display">0%</h4>
         <div class="container" id="transform-bar">
             <div class="progress-bar" id="progress-bar">
-
+                
             </div>
         </div>
     </div>
